@@ -1,5 +1,10 @@
 2008-03-04  Lillian Angel  <langel@redhat.com>
 
+	* Makefile.am: Removed gnu from tools.jar.
+	* Makefile.in: Regenerated.
+
+2008-03-04  Lillian Angel  <langel@redhat.com>
+
 	* rt/gnu/*: Removed.
 	* Makefile.am: Removed icedtea-paths.patch.
 	* Makefile.in: Regenerated.
